--- a/index.html
+++ b/index.html
@@ -1,39 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>02_PracticalTask_QueueBehavior</title>
-    <link href="./style.css" rel="stylesheet">
-</head>
+    <link href="./style.css" rel="stylesheet" />
+  </head>
 
-<body>
+  <body>
     <div class="container">
-        <h1>
-            02_PracticalTask_QueueBehavior
-        </h1>
-        <form id="form">
-            <div class="form-input">
-                <label for="name">Add queue item: </label>
-                <input type="text" name="input" id="input" placeholder="Enter your data...">
-            </div>
-            <div class="button-container">
-                <button type="submit" id="submit">ADD</button>
-                <button type="button" id="deleteButton">Delete</button>
-            </div>
-        </form>
-        <h3>Queue list:</h3>
-        <div class="queue-container">
-            <ol id="queue-list">
-            </ol>
-            <p> This is queue behavior app, test task for "TM", if queue doesn`t work correctly, please feel free to
-                contact me - <a href="kompotius43@gmail.com">Email</a>
-            </p>
+      <h1>02_PracticalTask_QueueBehavior</h1>
+      <form id="form">
+        <div class="form-input">
+          <label for="name">Add queue item: </label>
+          <input
+            type="text"
+            name="input"
+            id="input"
+            placeholder="Enter your data..."
+          />
         </div>
+        <div class="button-container">
+          <button type="submit" id="submit">ADD</button>
+          <button type="button" id="deleteButton">Delete</button>
+        </div>
+      </form>
+      <h3>Queue list:</h3>
+      <div class="queue-container">
+        <ol id="queue-list"></ol>
+        <p>
+          This is queue behavior app, test task for "TM", if queue doesn`t work
+          correctly, please feel free to contact me -
+          <a href="kompotius43@gmail.com">Email</a>
+        </p>
+      </div>
     </div>
     <script src="./index.js"></script>
-</body>
-
+  </body>
 </html>
